# QtRedux

./: .gitignore  CMakeLists.txt  LICENSE  README.md  all.pro
QtRedux/: CMakeLists.txt  QtRedux  QtRedux.pro  qtredux.cpp  qtredux.h  qtredux_global.h
examples/todos/: CMakeLists.txt  actions.cpp  actions.h  addtodowidget.cpp  addtodowidget.h  footer.cpp  footer.h  main.cpp  reducers.cpp  reducers.h  todolistwidget.cpp  todolistwidget.h  todos.pro  todoswidget.cpp  todoswidget.h
